--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.11"
   },
